fix centering on mobile and template2

--- a/templates/base.less
+++ b/templates/base.less
@@ -85,26 +85,20 @@ input {
 }
 
 .overlay {
+	// must change to absolute so we can display in a box inside dashboard editor
+	// widget will override this to be 'fixex'
 	position: fixed;
-  user-select: none;
-	width: 100%;
-	top:0px;
+	top: 0;
 	left: 0;
-	height: 100vh;
+	bottom: 0;
+	right: 0;
 	background: #000c; //@overlay;
 	z-index: 20000000000100;
   overflow: auto;
+	display: flex; // so .container's margin auto can work
 }
 
-.overlay__inner {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
-}
-
-.overlay--iphone{
+.overlay--iphone {
 	border: solid 5px #000000;
 	border-radius: 30px;
 }
@@ -185,10 +179,14 @@ input {
 
 .container {
 	background: @background;
+	margin: auto;
+	position: relative;
+	max-height: 100%;
 }
 
 .mobile .container {
 	background: @mobile_background;
+	max-height: unset;
 }
 
 .container__inner {
