--- a/templates/template2.less
+++ b/templates/template2.less
@@ -7,23 +7,11 @@
 		display: flex;
 		flex-direction: column;
 		width: 800px;
-		// max-height: 93%;
 		max-width: 90%;
 		align-items: center;
 		background-size: auto;
-		// position: relative;
-		// margin: auto auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 	}
 
-	.mobile .container{
-		max-height: unset;
-		margin-top: 70px ;
-    margin-bottom: 30px;
-	}
 	.container__inner {
 		display: flex;
 		width: 100%;
@@ -65,6 +53,7 @@
 	.form{
 		flex:4;
 	}
+
 	.description {
 		margin-top: 10px;
 		text-align: center;
